# addcopyfighandler

./: .gitignore  LICENSE  README.md  addcopyfighandler.py  generate_source_dist.bat  pyproject.toml  setup.py
src/: addcopyfighandler.py
